--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "nuxt-app",
-  "private": true,
-  "type": "module",
+  "devDependencies": {
+    "@nuxt/devtools": "latest",
+    "@nuxtjs/supabase": "^1.1.2",
+    "nuxt": "^3.7.4",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
+  },
   "engines": {
     "pnpm": "please-use-bun",
     "yarn": "please-use-bun"
   },
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -13,10 +19,5 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.4",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
-  }
+  "type": "module"
 }
