--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "nuxt-app",
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/supabase": "^1.1.2",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
+    "eslint": "^8.50.0",
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
@@ -20,7 +22,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "type": "module"
 }
