--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@vueuse/nuxt": "^10.4.1",
     "eslint": "^8.50.0",
     "nuxt": "^3.7.4",
+    "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
