--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "nuxt-app",
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/supabase": "^1.1.2",
-    "@vueuse/core": "^10.4.1",
-    "@vueuse/nuxt": "^10.4.1",
-    "eslint": "^8.50.0",
-    "nuxt": "^3.7.4",
-    "typescript": "^5.2.2",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
-  },
-  "engines": {
-    "pnpm": "please-use-bun",
-    "yarn": "please-use-bun"
-  },
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
-  },
-  "type": "module"
+	"name": "nuxt-app",
+	"devDependencies": {
+		"@nuxt/devtools": "latest",
+		"@nuxtjs/eslint-config-typescript": "^12.1.0",
+		"@nuxtjs/google-fonts": "^3.0.2",
+		"@nuxtjs/supabase": "^1.1.2",
+		"@vueuse/core": "^10.4.1",
+		"@vueuse/nuxt": "^10.4.1",
+		"eslint": "^8.50.0",
+		"eslint-config-prettier": "^9.0.0",
+		"nuxt": "^3.7.4",
+		"prettier": "^3.0.3",
+		"typescript": "^5.2.2",
+		"vue": "^3.3.4",
+		"vue-router": "^4.2.5"
+	},
+	"engines": {
+		"pnpm": "please-use-bun",
+		"yarn": "please-use-bun"
+	},
+	"private": true,
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+		"format": "prettier --write --ignore-path .gitignore \"**/*.{js,vue,ts,tsx,json,md}\""
+	},
+	"type": "module"
 }
