--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Lint
         run: bun lint
 
+      - name: TypeCheck
+        run: bun typecheck
+
       - name: Build
         run: bun run build
