--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@nuxtjs/supabase": "^1.1.2",
 		"@vueuse/core": "^10.4.1",
 		"@vueuse/nuxt": "^10.4.1",
+		"bun-types": "^1.0.5-canary.20231006T140143",
 		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^9.0.0",
 		"nuxt": "^3.7.4",
