--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@nuxtjs/supabase": "^1.1.2",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
-    "bun-types": "^1.0.5-canary.20231006T140143",
+    "add": "^2.0.6",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-plugin-vitest": "^0.3.2",
+    "happy-dom": "^12.9.0",
     "nuxt": "^3.7.4",
+    "nuxt-vitest": "^0.11.0",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
     "stylelint": "^15.10.3",
@@ -20,6 +23,7 @@
     "stylelint-config-standard": "^34.0.0",
     "stylelint-use-logical-spec": "^5.0.0",
     "typescript": "^5.2.2",
+    "vitest": "^0.34.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -34,6 +38,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "test": "vitest",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint --ignore-path .gitignore \"**/*.{css,vue}\"",
     "format": "prettier --write --ignore-path .gitignore \"**/*.{js,ts,vue,css,json}\"",
