--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,15 @@
 		"exactOptionalPropertyTypes": false,
 		"forceConsistentCasingInFileNames": true,
 		"noErrorTruncation": true,
-		"noFallthroughCasesInSwitch": true,
+		"noFallthroughCasesInSwitch": false,
 		"noImplicitAny": true,
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"noPropertyAccessFromIndexSignature": false,
 		"noUncheckedIndexedAccess": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
 		"strict": true,
 		"useUnknownInCatchVariables": true,
 		"types": ["vitest/globals"]
