--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll": true
 	},
+	"eslint.experimental.useFlatConfig": true,
 	"editor.formatOnSave": true,
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"files.autoSave": "onFocusChange"
 }
