--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,9 @@
 {
 	"recommendations": [
 		"antfu.goto-alias",
+		"christian-kohler.path-intellisense",
 		"esbenp.prettier-vscode",
+		"formulahendry.auto-rename-tag",
 		"dbaeumer.vscode-eslint",
 		"stylelint.vscode-stylelint",
 		"streetsidesoftware.code-spell-checker",
