--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
 		"esbenp.prettier-vscode",
 		"formulahendry.auto-rename-tag",
 		"dbaeumer.vscode-eslint",
+		"nuxtr.nuxtr-vscode",
 		"stylelint.vscode-stylelint",
 		"streetsidesoftware.code-spell-checker",
 		"usernamehw.errorlens",
