--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/supabase": "^1.1.2",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "add": "^2.0.6",
