--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt-vitest": "^0.11.0",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "stylelint": "^15.10.3",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^34.0.0",
