Fix Prettier setting

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "test": "vitest",
     "lint": "eslint ./src/**/*.{ts,vue}",
     "lint:style": "stylelint --ignore-path .gitignore \"**/*.{css,vue}\"",
-    "format": "prettier --write --ignore-path .gitignore \"**/*.{js,ts,vue,css,json}\"",
+    "format": "prettier --write \"**/*.{js,ts,vue,css,json}\"",
+    "format:check": "prettier --check \"**/*.{js,ts,vue,css,json}\"",
     "typecheck": "nuxi typecheck"
   },
   "type": "module"
