--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt-vitest": "^0.11.0",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "stylelint": "^15.10.3",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^34.0.0",
@@ -41,7 +42,8 @@
     "test": "vitest",
     "lint": "eslint ./src/**/*.{ts,vue}",
     "lint:style": "stylelint --ignore-path .gitignore \"**/*.{css,vue}\"",
-    "format": "prettier --write --ignore-path .gitignore \"**/*.{js,ts,vue,css,json}\"",
+    "format": "prettier --write \"**/*.{js,ts,vue,css,json}\"",
+    "format:check": "prettier --check \"**/*.{js,ts,vue,css,json}\"",
     "typecheck": "nuxi typecheck"
   },
   "type": "module"
