--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/supabase": "^1.1.3",
     "@nuxtjs/tailwindcss": "^6.9.4",
+    "@pinia/nuxt": "^0.5.1",
     "@tailwindcss/forms": "^0.5.6",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
