--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "learn_tagalog",
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
@@ -10,16 +10,16 @@
     "@tailwindcss/forms": "^0.5.6",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
-    "eslint": "^8.50.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-jsdoc": "^46.8.2",
-    "eslint-plugin-vitest": "^0.3.2",
+    "eslint-plugin-jsdoc": "^46.9.0",
+    "eslint-plugin-vitest": "^0.3.9",
     "happy-dom": "^12.9.0",
     "nuxt": "^3.8.1",
     "nuxt-vitest": "^0.11.2",
     "postcss-html": "^1.5.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "stylelint": "^15.10.3",
     "stylelint-config-recommended-vue": "^1.5.0",
