--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,9 @@ on:
 jobs:
   test-build:
     runs-on: ubuntu-latest
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the changed files back to the repository.
+      contents: write
     steps:
       - uses: actions/checkout@v3
 
@@ -22,20 +25,23 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Test
+        run: bun run test
+
       - name: Lint
-        run: bun lint
+        run: bun lint:fix
 
       - name: Style Lint
-        run: bun lint:style
+        run: bun lint-css:fix
 
       - name: Format Check
-        run: bun format:check 
+        run: bun format
 
       - name: Type Check
         run: bun typecheck
 
-      - name: Test
-        run: bun run test
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
 
       - name: Build
         run: bun run build
