Update codeActionsOnSave setting to use explicit source.fixAll value

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,7 @@
 		"vueuse"
 	],
 	"editor.codeActionsOnSave": {
-		"source.fixAll": true
+		"source.fixAll": "explicit"
 	},
 	"editor.formatOnSave": true,
 	"editor.quickSuggestions": {
