--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "stylelint-use-logical-spec": "^5.0.0",
     "typescript": "^5.2.2",
     "vitest": "^1.0.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^1.8.25"
   },
   "engines": {
     "pnpm": "please-use-bun",
