--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "learn_tagalog",
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/test-utils": "^3.9.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/supabase": "^1.1.3",
@@ -17,12 +18,11 @@
     "eslint-plugin-vitest": "^0.3.9",
     "happy-dom": "^12.9.0",
     "nuxt": "^3.9.0",
-    "nuxt-vitest": "^0.11.5",
     "postcss-html": "^1.5.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "typescript": "^5.2.2",
-    "vitest": "^1.0.4",
+    "vitest": "^1.1.1",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.25"
   },
