--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-vitest": "^0.3.9",
     "happy-dom": "^12.9.0",
     "nuxt": "^3.9.1",
+    "nuxt-icon": "^0.6.8",
     "postcss-html": "^1.5.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.6",
