--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,29 +16,36 @@ jobs:
       # Give the default GITHUB_TOKEN write permission to commit and push the changed files back to the repository.
       contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v2
         with:
-          bun-version: latest
+          version: 8.x.x
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: 'pnpm'
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: bun install
+        run: pnpm install
 
       - name: Test
-        run: bun run test
+        run: pnpm run test
 
       - name: Lint
-        run: bun lint:fix
+        run: pnpm lint:fix
 
       - name: Format Check
-        run: bun format
+        run: pnpm format
 
       - name: Type Check
-        run: bun typecheck
+        run: pnpm typecheck
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
 
       - name: Build
-        run: bun run build
+        run: pnpm run build
