--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,7 @@ updates:
       lint-and-format:
         patterns:
           - "*eslint*"
+          - "oxlint"
           - "*stylelint*"
           - "*prettier*"
       test:
