--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-jsdoc": "^48.0.2",
+    "eslint-plugin-oxlint": "^0.1.0",
     "eslint-plugin-vitest": "^0.3.9",
     "happy-dom": "^12.9.0",
     "nuxt": "^3.9.1",
     "nuxt-icon": "^0.6.8",
+    "oxlint": "^0.1.2",
     "postcss-html": "^1.5.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.6",
@@ -38,7 +40,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest",
-    "lint": "eslint ./src/**/*.{ts,vue}",
+    "lint": "eslint ./src/**/*.{ts,vue} && oxlint",
     "lint:fix": "eslint --fix ./src/**/*.{ts,vue}",
     "lint-css": "stylelint --ignore-path .gitignore \"**/*.{css,vue}\"",
     "lint-css:fix": "stylelint --fix --ignore-path .gitignore \"**/*.{css,vue}\"",
