--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nuxtjs/tailwindcss": "^6.9.4",
     "@pinia/nuxt": "^0.5.1",
     "@tailwindcss/forms": "^0.5.6",
+    "@vue/language-plugin-pug": "^1.8.27",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "eslint": "^8.53.0",
@@ -24,6 +25,7 @@
     "postcss-html": "^1.6.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "pug": "^3.0.2",
     "typescript": "^5.2.2",
     "vitest": "^1.1.1",
     "vue-router": "^4.2.5",
