--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nuxtjs/supabase": "^1.1.3",
     "@nuxtjs/tailwindcss": "^6.9.4",
     "@pinia/nuxt": "^0.5.1",
+    "@prettier/plugin-pug": "^3.0.0",
     "@tailwindcss/forms": "^0.5.6",
     "@vue/language-plugin-pug": "^1.8.27",
     "@vueuse/core": "^10.5.0",
