Update dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,7 +19,8 @@ updates:
           - "*prettier*"
       test:
         patterns:
-          - "*test*"
+          - "*vitest*"
+          - "happy-dom"
       nuxt:
         patterns:
           - "*nuxt*"
