--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@pinia/nuxt": "^0.5.1",
     "@prettier/plugin-pug": "^3.0.0",
+    "@stylistic/eslint-plugin-js": "^1.7.0",
     "@tailwindcss/forms": "^0.5.7",
     "@vue/language-plugin-pug": "^2.0.10",
     "@vueuse/core": "^10.9.0",
@@ -44,6 +45,7 @@
     "postinstall": "nuxt prepare",
     "test": "vitest",
     "lint": "eslint ./src/**/*.{ts,vue} && oxlint",
+    "lint:inspect": "eslint --inspect-config",
     "lint:fix": "eslint --fix ./src/**/*.{ts,vue}",
     "lint-css": "stylelint --ignore-path .gitignore \"**/*.{css,vue}\"",
     "lint-css:fix": "stylelint --fix --ignore-path .gitignore \"**/*.{css,vue}\"",
