--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,26 +1,25 @@
-name: Auto Merge Dependabot PRs
+name: Auto-merge Dependabot PRs
 
 on:
-  workflow_run:
-    workflows: ["Test"] # replace with the name of your test workflow
-    types:
-      - completed
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot[bot]' && github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Merge PR
-        uses: actions/github-script@v5
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Wait for checks to pass
+        uses: fountainhead/action-wait-for-check@v1.0.0
+        id: wait-for-checks
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { owner, repo, number } = context.issue;
-            const { data: pullRequest } = await github.pulls.get({ owner, repo, pull_number: number });
-            if (pullRequest.mergeable) {
-              await github.pulls.merge({ owner, repo, pull_number: number });
-            }
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: 'Test' 
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Merge PR
+        if: ${{ steps.wait-for-checks.outputs.conclusion == 'success' }}
+        run: gh pr merge --auto --merge ${{ github.event.pull_request.html_url }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
