--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+    types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
   test-build:
@@ -49,3 +50,22 @@ jobs:
 
       - name: Build
         run: pnpm run build
+
+  auto-merge:
+    runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Wait for checks to pass
+        uses: fountainhead/action-wait-for-check@v1.0.0
+        id: wait-for-checks
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: 'test-build' 
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Merge PR
+        if: ${{ steps.wait-for-checks.outputs.conclusion == 'success' }}
+        run: gh pr merge --auto --merge ${{ github.event.pull_request.html_url }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
