chore: Update srcDir to 'app/' in nuxt.config.ts

--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest",
-    "lint": "eslint ./src/**/*.{ts,vue} && oxlint",
+    "lint": "eslint ./app/**/*.{ts,vue} && oxlint",
     "lint:inspect": "eslint --inspect-config",
-    "lint:fix": "eslint --fix ./src/**/*.{ts,vue}",
+    "lint:fix": "eslint --fix ./app/**/*.{ts,vue}",
     "lint-css": "stylelint --ignore-path .gitignore \"**/*.{css,vue}\"",
     "lint-css:fix": "stylelint --fix --ignore-path .gitignore \"**/*.{css,vue}\"",
     "format": "prettier --write \"**/*.{js,ts,vue,css,json}\"",
