--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          version: 8.x.x
+          version: 9.4.0
 
       - name: Use Node.js
         uses: actions/setup-node@v4
