--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,15 @@
 		"vitest",
 		"vueuse"
 	],
+	"cSpell.ignorePaths": [
+		"package-lock.json",
+		"node_modules",
+		"vscode-extension",
+		".git/objects",
+		".vscode",
+		".vscode-insiders",
+		".devcontainer"
+	],
 	"editor.codeActionsOnSave": {
 		"source.fixAll": "explicit"
 	},
