--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
     types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
-  test-build:
+  test:
     runs-on: ubuntu-latest
     permissions:
       # Give the default GITHUB_TOKEN write permission to commit and push the changed files back to the repository.
@@ -29,7 +29,10 @@ jobs:
           cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --ignore-scripts
+
+      - name: Type Check
+        run: pnpm typecheck
 
       - name: Test
         run: pnpm run test
@@ -39,9 +42,6 @@ jobs:
 
       - name: Format Check
         run: pnpm format
-
-      - name: Type Check
-        run: pnpm typecheck
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
@@ -62,7 +62,7 @@ jobs:
         id: wait-for-checks
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: 'test-build' 
+          checkName: 'test' 
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Merge PR
         if: ${{ steps.wait-for-checks.outputs.conclusion == 'success' }}
