--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "learn_tagalog",
+  "packageManager": "pnpm@9.9.0",
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/eslint": "0.5.2",
+    "@nuxt/icon": "^1.5.1",
     "@nuxt/test-utils": "^3.14.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/supabase": "^1.3.5",
@@ -18,7 +20,6 @@
     "eslint-plugin-vitest": "^0.5.4",
     "happy-dom": "^15.7.3",
     "nuxt": "^3.13.0",
-    "nuxt-icon": "^0.6.10",
     "oxlint": "^0.9.2",
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
