--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "learn_tagalog",
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.10.0",
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxt/eslint": "0.5.2",
+    "@nuxt/eslint": "0.5.7",
     "@nuxt/icon": "^1.5.1",
     "@nuxt/test-utils": "^3.14.2",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/supabase": "^1.4.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
+    "@stylistic/eslint-plugin-js": "^2.8.0",
     "@tailwindcss/forms": "^0.5.9",
     "@vueuse/nuxt": "^11.0.3",
     "eslint": "^9.10.0",
