--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
 				"streetsidesoftware.code-spell-checker",
 				"stylelint.vscode-stylelint",
 				"usernamehw.errorlens",
-				"vue.volar"
+				"vue.volar",
+				"fill-labs.dependi"
 			]
 		}
 	},
