--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
 		".git/objects",
 		".vscode",
 		".vscode-insiders",
-		".devcontainer"
+		".devcontainer",
+		"app/database-generated.types.ts"
 	],
 	"cSpell.words": [
 		"composables",
@@ -56,6 +57,7 @@
 	},
 	"files.autoSave": "afterDelay",
 	"files.autoSaveDelay": 1000,
+	"files.autoSaveWhenNoErrors": true,
 	"github.copilot.chat.experimental.codeGeneration.instructions": [
 		{
 			"file": "coding-guidelines.md"
