--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn_tagalog",
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm@9.15.0",
   "devDependencies": {
     "@nuxt/devtools": "^1.6.1",
     "@nuxt/eslint": "^0.7.1",
@@ -25,7 +25,7 @@
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "typescript": "^5.6.3",
+    "typescript": "5.6.3",
     "vitest": "^2.1.5",
     "vue-tsc": "^2.1.10"
   },
