--- a/.github/workflows/update-nuxt-deps.yml
+++ b/.github/workflows/update-nuxt-deps.yml
@@ -34,16 +34,29 @@ jobs:
         run: |
           git diff --quiet || echo "changes=true" >> $GITHUB_OUTPUT
 
+      - name: Setup GitHub CLI
+        run: |
+          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+
       - name: Create Pull Request
         if: steps.git-check.outputs.changes == 'true'
-        uses: peter-evans/create-pull-request@v6
-        with:
-          commit-message: 'chore: update nuxt dependencies'
-          title: 'chore: Update Nuxt dependencies ${{ format(github.event.repository.updated_at, ''yyyy-MM-dd HH:mm'') }}'
-          body: |
-            Automated PR to update Nuxt dependencies using `npx nuxt@latest upgrade --force`
-            
-            This PR was created automatically by the Update Nuxt Dependencies workflow.
-          branch: chore/update-nuxt-deps-${{ format(github.event.repository.updated_at, 'yyyy-MM-dd-HH-mm') }}
-          delete-branch: true
-          base: main
+        run: |
+          TIMESTAMP=$(date '+%Y-%m-%d-%H-%M')
+          BRANCH_NAME="chore/update-nuxt-deps-${TIMESTAMP}"
+          
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+
+         
+          git checkout -b "$BRANCH_NAME"
+          git add .
+          git commit -m "chore: update nuxt dependencies"
+          git push origin "$BRANCH_NAME"
+          
+          gh pr create \
+            --title "chore: Update Nuxt dependencies $(date '+%Y-%m-%d %H:%M')" \
+            --body "Automated PR to update Nuxt dependencies using \`npx nuxt@latest upgrade --force\`
+
+            This PR was created automatically by the Update Nuxt Dependencies workflow." \
+            --base main \
+            --head "$BRANCH_NAME"
