--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Test
+name: CI
 
 on:
   pull_request:
@@ -12,40 +9,35 @@ jobs:
   test:
     runs-on: ubuntu-latest
     permissions:
-      # Give the default GITHUB_TOKEN write permission to commit and push the changed files back to the repository.
       contents: write
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: 22
-          cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml
+          bun-version: latest
 
       - name: Install dependencies
-        run: pnpm install --ignore-scripts
+        run: bun install --no-save
 
       - name: Type Check
-        run: pnpm typecheck
+        run: bun run typecheck
 
       - name: Test
-        run: pnpm run test
+        run: bun run test
 
       - name: Lint
-        run: pnpm lint:fix
+        run: bun run lint:fix
 
       - name: Format Check
-        run: pnpm format
+        run: bun run format
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
 
       - name: Build
-        run: pnpm run build
+        run: bun run build
 
   auto-merge:
     runs-on: ubuntu-latest
