--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -2,6 +2,9 @@ name: Update Dependencies
 
 on:
   workflow_dispatch:
+  schedule:
+    # Run at 23:00 UTC on Friday (8:00 AM Saturday JST)
+    - cron: '0 23 * * 5'
 
 jobs:
   update-deps:
